Fixed subtitle spacing

--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,7 @@ section h2 {
 
 /* Projects */
 .project {
-    display: flex;
+display: flex;
     align-items: center;
     background: #1e1e1e;
     padding: 20px;
@@ -141,6 +141,15 @@ section h2 {
     color: #007a8e;
 }
 
+/* Adjust subtitle spacing */
+.project h3 + .subtitle{
+    margin-top: -0.5rem; /* Reduce space between h3 and subtitle */
+}
+
+.education-item h3 {
+    margin-bottom: -1rem;;
+}
+
 /* Contact Form */
 form {
     display: flex;
@@ -163,7 +172,7 @@ form button {
     background: #007a8e;
     cursor: pointer;
     color: white;
-}
+    }
 form button:hover {
     background: #00adb5;
     color: black;
